Fixed mobile tag line and shifted Tubbs. He's a tricky one.

--- a/web/stylesheets/main.css
+++ b/web/stylesheets/main.css
@@ -56,7 +56,14 @@ body{
   position: absolute;
   top:30px;
   right:0;
-  max-height: 100px 
+  /* display:none; */
+}
+
+#cat{
+  position: absolute;
+  top:30px;
+  right:0;
+  max-height: 50%;
   /* display:none; */
 }
 
@@ -115,7 +122,7 @@ a:hover{
 
     .header h3{
       position:relative;
-      font-size: 40px;
+      font-size: 18px;
       /*display: none;*/
     }
 
